<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5dip"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dip"
            android:background="@drawable/style_layout_01"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/ly_test_alg" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0" >

                <RadioButton
                    android:id="@+id/lyRd1"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/style_tab_button_bar"
                    android:button="@android:color/transparent"
                    android:checked="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/ly_test_trheads"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/lyRd2"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/style_tab_button_bar"
                    android:button="@android:color/transparent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/ly_test_sieve"
                    android:textSize="12sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="10dip"
                android:paddingTop="15dip"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/lyLimitSpinner"
                    style="@style/spinner_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="15dip"
                    android:layout_weight=".40"
                    android:enabled="true"
                    android:gravity="right|center_vertical" />

                <Button
                    android:id="@+id/lyFindPrimesBtn"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight=".60"
                    android:background="@drawable/style_button01"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/ly_test_btn"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="3dip"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lyTxtProcessors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/lyTxtProcess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ly_lbl_process"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/lyTxtTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ly_test_lbl_primes_total" />

                <TextView
                    android:id="@+id/lyTxtTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ly_lbl_primes_time" />
            </LinearLayout>
        </LinearLayout>

        <ExpandableListView
            android:id="@+id/lyPrimesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>